// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with renderErrors 1`] = `
<HeadProvider>
  <StoreTitle />
  <Main
    isMasked={true}
  />
  <Classify(Mask)
    isActive={true}
  />
  <ToastContainer />
</HeadProvider>
`;

exports[`renders with unhandledErrors 1`] = `
<HeadProvider>
  <StoreTitle />
  <Main
    isMasked={false}
  >
    <Routes />
  </Main>
  <Classify(Mask)
    dismiss={[Function]}
    isActive={false}
  />
  <Navigation />
  <ToastContainer />
</HeadProvider>
`;
